<resources>
    <string name="app_name">LastMusic</string>
    <string name="search_by_name">Search by Name</string>
    <string name="no_results_found">No Results Found</string>
    <string name="no_internet_connection">No Internet Connection.\n Tap to Retry</string>
    <string name="artists">Search Artists</string>
    <string name="server_error">Server Error</string>
    <string name="artist_details">Artist Details</string>
    <string name="profile_summary">Profile Summary:</string>
    <string name="bio_link">Biography:</string>
    <string name="streaming">Streaming</string>
    <string name="loading">Loading...</string>
    <string name="about">About:</string>
    <string name="please_wait">Please wait...</string>
    <string name="image_not_found">Image not found</string>
</resources>
