<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray_color_2"
    android:orientation="vertical">

    <include layout="@layout/tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_margin="5dp"
                android:background="@drawable/white_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_gravity="top|end"
                    tools:ignore="MissingPrefix"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/streaming" />

                <ImageView
                    android:id="@+id/ivStream"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="top|end"
                    android:scaleType="fitXY"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_green_circle"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_artist_dummy"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tvArtistName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:textSize="17sp"
                        tools:text="Gary Sobers" />

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvBusinessInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:padding="7dp"
                    android:text="@string/artist_details"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="0.3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lLBusinessInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center|start"
                    android:padding="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/profile_summary"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:background="@drawable/white_background"
                    android:elevation="3dp"
                    android:gravity="center|start"
                    android:padding="10dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/profile_summary"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center|start"
                    android:padding="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/about"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvAboutUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:gravity="center|start"
                    android:padding="10dp"
                    android:elevation="3dp"
                    android:background="@drawable/white_background"
                    android:layout_marginLeft="5dp"
                    android:text="@string/profile_summary"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center|start"
                    android:padding="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/bio_link"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvBioLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:gravity="center|start"
                    android:padding="10dp"
                    android:elevation="3dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/white_background"
                    android:text="@string/profile_summary"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>